Updated about page

--- a/app/views/about/home/index.html.erb
+++ b/app/views/about/home/index.html.erb
@@ -16,12 +16,12 @@
 
 							<div class="faq-entry">
 								<strong>Why should I come here?</strong><br />	
-								Its about 2.2mb less clutter than HaloWaypoint, and we only track Matchmaking to prevent abuse and generally are faster/sexier.
+								While Halo Waypoint is an incridebly well built website, it's a bit overkill for just looking at stats. Branch offers a much simplier approach that takes away all the clutter and tries to just show you exactly what you want to know about that 1v1 against that kid in matchmaking.
 							</div>
 
 							<div class="faq-entry">
 								<strong>How often can I update my stats?</strong><br />
-								It depends on the stats. Service Records, Commendations, Game Histories, and Specilizations update every 8 minutes. A Matchs History never update, as they will never change. 
+								It depends on the stats. Service Records, Commendations, Game Histories, and Specilizations update every 8 minutes. A Matchs History never update, as they <strong><sup>should</sup></strong> never change.
 							</div>
 
 							<div class="faq-entry">
