--- a/app/views/user/settings/profile/index.html.erb
+++ b/app/views/user/settings/profile/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :user, true %>
-<% content_for :title, "Xerax's Profile" %>	
+<% content_for :title, "Edit Your Profile" %>	
 <% content_for :has_footer, true %>
 <% content_for :setting_active, 'profile' %>
 <% content_for :scripts do %>
