Added some placeholder shit to the legal pages

--- a/app/views/legal/privacy/index.html.erb
+++ b/app/views/legal/privacy/index.html.erb
@@ -1,1 +1,15 @@
-privacy
+<% content_for :blog, true %>
+<% content_for :title, 'Privacy Policy' %>	
+<% content_for :has_footer, true %>
+<% content_for :template, 'legal legal_privacy' %>
+<% content_for :scripts do %>
+<script>
+</script>
+<% end %>
+
+<div class="bs-header" id="content">
+	<div class="container">
+		<h1>Privacy Policy</h1>
+		<p>What Branch will do with your data, and how.</p>
+	</div>
+</div>
