--- a/app/views/legal/terms/index.html.erb
+++ b/app/views/legal/terms/index.html.erb
@@ -1,1 +1,15 @@
-terms
+<% content_for :blog, true %>
+<% content_for :title, 'Terms' %>	
+<% content_for :has_footer, true %>
+<% content_for :template, 'legal legal_terms' %>
+<% content_for :scripts do %>
+<script>
+</script>
+<% end %>
+
+<div class="bs-header" id="content">
+	<div class="container">
+		<h1>Terms</h1>
+		<p>stuff.</p>
+	</div>
+</div>
