Added legal links to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -139,6 +139,15 @@
 								<li class="muted">·</li>
 								<li><a href="/blog/" target="_blank">Blog</a></li>
 							</ul>
+							<ul class="footer-links legal-links">
+								<li>
+									<%= link_to('Privacy Policy', legal_privacy_path) %>
+								</li>
+								<li class="muted">·</li>
+								<li>
+									<%= link_to('Terms', legal_terms_path) %>
+								</li>
+							</ul>
 						</div>
 
 						<div class="col-md-2 hidden-xs hidden-sm">
