--- a/app/views/about/home/index.html.erb
+++ b/app/views/about/home/index.html.erb
@@ -21,7 +21,7 @@
 
 							<div class="faq-entry">
 								<strong>How often can I update my stats?</strong><br />
-								It depends on the stats. Service Records, Commendations, Game Histories, and Specilizations update every 8 minutes. A Matchs History never update, as they <strong><sup>should</sup></strong> never change.
+								It depends on the stats. Service Records, Commendations, Game Histories, and Specilizations update every 8 minutes. A Match's History never update, as they <strong><sup>should</sup></strong> never change.
 							</div>
 
 							<div class="faq-entry">
