--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -340,7 +340,7 @@
 														</li>
 													</ul>
 
-													<div class="player-stats" class="tab-content">
+													<div class="player-stats tab-content">
 														<div class="tab-pane fade active in" id="<%= identifier %>-summary">
 														</div>
 														<div class="tab-pane fade" id="<%= identifier %>-weapons">
