moved medals class name

--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -345,7 +345,7 @@
 														</div>
 														<div class="tab-pane fade" id="<%= identifier %>-weapons">
 														</div>
-														<div class="medals tab-pane fade" id="<%= identifier %>-medals">
+														<div class="tab-pane fade medals" id="<%= identifier %>-medals">
 															<% medal_graph_identifier = 'player-medals-' + rand(1000..9999).to_s %>
 															<div class="graph-container hidden-xs">
 																<div id="<%= medal_graph_identifier %>" style="height: 250px; width: 700px;"></div>
