tweaked medals view, fixed for responsive

--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -357,22 +357,34 @@
 																<div class="col-md-1 col-md-offset-3">
 																	<div class="medal" style="background-image: url('https://assets.halowaypoint.com/games/h4/medals/v1/large/bonus-first-strike.png')">
 																	</div>
-																	<%= rand(2..12) %>
+																	<div class="count">
+																		<%= rand(2..12) %>
+																	</div>
+																	<div class="earned">Earned</div>
 																</div>
 																<div class="col-md-1">
 																	<div class="medal" style="background-image: url('https://assets.halowaypoint.com/games/h4/medals/v1/large/bonus-first-strike.png')">
 																	</div>
-																	<%= rand(2..12) %>
+																	<div class="count">
+																		<%= rand(2..12) %>
+																	</div>
+																	<div class="earned">Earned</div>
 																</div>
 																<div class="col-md-1">
 																	<div class="medal" style="background-image: url('https://assets.halowaypoint.com/games/h4/medals/v1/large/bonus-first-strike.png')">
 																	</div>
-																	<%= rand(2..12) %>
+																	<div class="count">
+																		<%= rand(2..12) %>
+																	</div>
+																	<div class="earned">Earned</div>
 																</div>
 																<div class="col-md-1">
 																	<div class="medal" style="background-image: url('https://assets.halowaypoint.com/games/h4/medals/v1/large/bonus-first-strike.png')">
 																	</div>
-																	<%= rand(2..12) %>
+																	<div class="count">
+																		<%= rand(2..12) %>
+																	</div>
+																	<div class="earned">Earned</div>
 																</div>
 															</div>
 
