--- a/app/assets/stylesheets/halo4/game_history.css.scss
+++ b/app/assets/stylesheets/halo4/game_history.css.scss
@@ -160,6 +160,7 @@ body.halo4_game_history {
 							> #top-medals {
 								> div {
 									min-width: 100px;
+									max-width: 100px;
 									min-height: 100px;
 									padding: 10px;
 
@@ -172,6 +173,16 @@ body.halo4_game_history {
 
 										background-repeat: no-repeat;
 										background-size: 80px 80px;
+									}
+
+									> .count {
+										height: 30px;
+									}
+
+									> .earned {
+										font-size: 11px;
+										font-weight: 600;
+										text-transform: uppercase;
 									}
 								}
 							}	
