--- a/app/assets/stylesheets/halo4/game_history.css.scss
+++ b/app/assets/stylesheets/halo4/game_history.css.scss
@@ -169,6 +169,11 @@ body.halo4_game_history {
 								}
 							}
 						}
+						> .weapons {
+							> .weapons > tbody > tr > .weapon {
+								
+							}
+						}
 						> .medals {
 							> #top-medals {
 								> div {
