added the css fix

--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -287,12 +287,12 @@
 									<div class="col-md-12 header">
 										<div class="row">
 											<div class="col-md-5 team-indicator"><%= team[:name] %></div>
-											<div class="col-md-1 score-indicator hidden-xs hidden-sm">Score</div>
-											<div class="col-md-1 kills-indicator hidden-xs hidden-sm">Kills</div>
-											<div class="col-md-1 deaths-indicator hidden-xs hidden-sm">Deaths</div>
-											<div class="col-md-2 kd-indicator hidden-xs hidden-sm">K/D Ratio</div>
-											<div class="col-md-1 assists-indicator hidden-xs hidden-sm">Assists</div>
-											<div class="col-md-1 csr-indicator hidden-xs hidden-sm">CSR</div>
+											<div class="col-md-1 score-indicator check-dat-paddin hidden-xs hidden-sm">Score</div>
+											<div class="col-md-1 kills-indicator check-dat-paddin hidden-xs hidden-sm">Kills</div>
+											<div class="col-md-1 deaths-indicator check-dat-paddin hidden-xs hidden-sm">Deaths</div>
+											<div class="col-md-2 kd-indicator check-dat-paddin hidden-xs hidden-sm">K/D Ratio</div>
+											<div class="col-md-1 assists-indicator check-dat-paddin hidden-xs hidden-sm">Assists</div>
+											<div class="col-md-1 csr-indicator check-dat-paddin hidden-xs hidden-sm hidden-md">CSR</div>
 										</div>
 									</div>
 									<div class="team-players">
