hid csr on medium, no idea why it's going to the new line

--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -314,7 +314,7 @@
 													<div class="col-md-1 deaths-indicator">7</div>
 													<div class="col-md-2 kd-indicator">1.55</div>
 													<div class="col-md-1 assists-indicator">6</div>
-													<div class="col-md-1 csr-indicator" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/small/50.png);"></div>
+													<div class="col-md-1 csr-indicator hidden-md" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/small/50.png);"></div>
 												</div>
 												<div class="mobile-view visible-xs visible-sm row">
 													<div class="expander-indicator">
