Added more stats

--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -405,7 +405,20 @@
 																			<span class="badge">0</span>
 																			Mode Medals Earned
 																		</li> Hide this is 0 -->
+																	</ul>
 
+																	<h2>
+																		Player
+																	</h2>
+																	<ul class="list-group">
+																		<li class="list-group-item">
+																			<span class="badge">14</span>
+																			CSR
+																		</li>
+																		<li class="list-group-item">
+																			<span class="badge">SR 140</span>
+																			Rank
+																		</li>
 																	</ul>
 																</div>
 															</div>
