removed the fixed width of the emblem flair, was fucking everything up

--- a/app/assets/stylesheets/halo4/game_history.css.scss
+++ b/app/assets/stylesheets/halo4/game_history.css.scss
@@ -118,7 +118,7 @@ body.halo4_game_history {
 								}
 
 								> .visual-flair {
-									width: 60px;
+									// width: 60px;
 									height: 60px;
 									background-position: center;
 									background-repeat: no-repeat;
