showed CSR on medium again, and added the padding overider to all data fields

--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -265,7 +265,7 @@
 											<div class="col-md-1 deaths-indicator check-dat-paddin hidden-xs hidden-sm">Deaths</div>
 											<div class="col-md-2 kd-indicator check-dat-paddin hidden-xs hidden-sm">K/D Ratio</div>
 											<div class="col-md-1 assists-indicator check-dat-paddin hidden-xs hidden-sm">Assists</div>
-											<div class="col-md-1 csr-indicator check-dat-paddin hidden-xs hidden-sm hidden-md">CSR</div>
+											<div class="col-md-1 csr-indicator check-dat-paddin hidden-xs hidden-sm">CSR</div>
 										</div>
 									</div>
 									<div class="team-players">
@@ -284,12 +284,12 @@
 														<br />
 														<strong>DOPE</strong>
 													</div>
-													<div class="col-md-1 score-indicator">420</div>
-													<div class="col-md-1 kills-indicator">15</div>
-													<div class="col-md-1 deaths-indicator">7</div>
-													<div class="col-md-2 kd-indicator">1.55</div>
-													<div class="col-md-1 assists-indicator">6</div>
-													<div class="col-md-1 csr-indicator hidden-md" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/small/50.png);"></div>
+													<div class="col-md-1 score-indicator check-dat-paddin">420</div>
+													<div class="col-md-1 kills-indicator check-dat-paddin">15</div>
+													<div class="col-md-1 deaths-indicator check-dat-paddin">7</div>
+													<div class="col-md-2 kd-indicator check-dat-paddin">1.55</div>
+													<div class="col-md-1 assists-indicator check-dat-paddin">6</div>
+													<div class="col-md-1 csr-indicator check-dat-paddin" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/small/50.png);"></div>
 												</div>
 												<div class="mobile-view visible-xs visible-sm row">
 													<div class="expander-indicator">
