--- a/app/assets/stylesheets/halo4/game_history.css.scss
+++ b/app/assets/stylesheets/halo4/game_history.css.scss
@@ -79,8 +79,10 @@ body.halo4_game_history {
 				list-style-type: none;
 				margin: 0;
 				padding: 0;
+				display: inline;
 
 				> li {
+					display: inline;
 				}
 			}
 		}
